Automatically backed up by Learn

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -13,6 +13,12 @@
   <%= f.text_field :inventory %>
   <%= f.submit "submit" %>
 <% end %>
+  
+<div id="productResult">
+  <h2 id="productTitle"></h2>
+  <p id="postBody"></p>
+</div>
+
 
 <script type="text/javascript" charset="utf-8">
   $(function () {
