--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -15,8 +15,10 @@
 <% end %>
   
 <div id="productResult">
-  <h2 id="productTitle"></h2>
-  <p id="productBody"></p>
+  <h2 id="productName"></h2>
+  <p id="productDescription"></p>
+  <p id="productPrice"></p>
+  <p id="productInventory"></p>
 </div>
 
 
