Automatically backed up by Learn

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -37,7 +37,7 @@
         $("#productName").text(prod["name"]);
         $("#productDescription").text(prod["description"]);
         $("#productPrice").text(prod["price"]);
-        $("#productInventory").text(prod["price"]);
+        $("#productInventory").text(prod["inventory"]);
 
       });
     });
